3.10.5/_sources/gallery/text_labels_and_annotations/line_with_text.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/text_labels_and_annotations/line_with_text.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_text_labels_and_annotations_line_with_text.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_line_with_text.py:


=======================
Artist within an artist
=======================

Override basic methods so an artist can contain another
artist.  In this case, the line contains a Text instance to label it.

.. GENERATED FROM PYTHON SOURCE LINES 9-68

.. code-block:: Python

    import matplotlib.pyplot as plt
    import numpy as np

    import matplotlib.lines as lines
    import matplotlib.text as mtext
    import matplotlib.transforms as mtransforms


    class MyLine(lines.Line2D):
        def __init__(self, *args, **kwargs):
            # we'll update the position when the line data is set
            self.text = mtext.Text(0, 0, '')
            super().__init__(*args, **kwargs)

            # we can't access the label attr until *after* the line is
            # initiated
            self.text.set_text(self.get_label())

        def set_figure(self, figure):
            self.text.set_figure(figure)
            super().set_figure(figure)

        # Override the Axes property setter to set Axes on our children as well.
        @lines.Line2D.axes.setter
        def axes(self, new_axes):
            self.text.axes = new_axes
            lines.Line2D.axes.fset(self, new_axes)  # Call the superclass property setter.

        def set_transform(self, transform):
            # 2 pixel offset
            texttrans = transform + mtransforms.Affine2D().translate(2, 2)
            self.text.set_transform(texttrans)
            super().set_transform(transform)

        def set_data(self, x, y):
            if len(x):
                self.text.set_position((x[-1], y[-1]))

            super().set_data(x, y)

        def draw(self, renderer):
            # draw my label at the end of the line with 2 pixel offset
            super().draw(renderer)
            self.text.draw(renderer)

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    fig, ax = plt.subplots()
    x, y = np.random.rand(2, 20)
    line = MyLine(x, y, mfc='red', ms=12, label='line label')
    line.text.set_color('red')
    line.text.set_fontsize(16)

    ax.add_line(line)

    plt.show()




.. image-sg:: /gallery/text_labels_and_annotations/images/sphx_glr_line_with_text_001.png
   :alt: line with text
   :srcset: /gallery/text_labels_and_annotations/images/sphx_glr_line_with_text_001.png, /gallery/text_labels_and_annotations/images/sphx_glr_line_with_text_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 69-89

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.lines`
   - `matplotlib.lines.Line2D`
   - `matplotlib.lines.Line2D.set_data`
   - `matplotlib.artist`
   - `matplotlib.artist.Artist`
   - `matplotlib.artist.Artist.draw`
   - `matplotlib.artist.Artist.set_transform`
   - `matplotlib.text`
   - `matplotlib.text.Text`
   - `matplotlib.text.Text.set_color`
   - `matplotlib.text.Text.set_fontsize`
   - `matplotlib.text.Text.set_position`
   - `matplotlib.axes.Axes.add_line`
   - `matplotlib.transforms`
   - `matplotlib.transforms.Affine2D`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.126 seconds)


.. _sphx_glr_download_gallery_text_labels_and_annotations_line_with_text.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: line_with_text.ipynb <line_with_text.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: line_with_text.py <line_with_text.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: line_with_text.zip <line_with_text.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
